@@ -1,0 +1,12 @@
+/* { dg-do run } */
+/* { dg-data {c*} {0x00 0x00 0x00 0x00  0x00 0x00 0x00 0x00   0x00 0x00 0x00 0x00} } */
+
+type Foo  = struct { int i; };
+type Bar = struct { Foo f; byte l; };
+
+/* { dg-command {.set endian big} } */
+/* { dg-command {.set obase 16} } */
+
+/* { dg-command {Bar @ 4#B = Bar { f = Foo { i = 0xaabbccdd }, l = 0xff } } } */
+/* { dg-command {Bar @ 4#B} } */
+/* { dg-output {Bar {f=Foo {i=0xaabbccdd},l=0xffUB}} } */
