@@ -1,5 +1,14 @@
 2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pvm-val.c (pvm_val_reloc): Fix calculation of new
+	boffset for contained structs.
+	* testsuite/poke.map/ass-map-9.pk: New test.
+	* testsuite/poke.map/ass-map-10.pk: Likewise.
+	* testsuite/poke.map/ass-map-11.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2020-11-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-gen.c (pkl_gen_ps_scons): Subpass on scons_type
 	instead of calling the constructor closure directly.
 
